--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor = "#009FFD"
+primaryColor = "#031e57"
 secondaryBackgroundColor = "#031e57"
 textColor = "#FFFFFF"
 font = "sans serif"
